--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,18 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
 
 *{
 	font-family: "Poppins", sans-serif;;
 }
+
 /*Start Animations*/
 @-webkit-keyframes animatetop {
 	from {
