hero section ui updated

--- a/src/App.css
+++ b/src/App.css
@@ -197,3 +197,18 @@ body {
 	40% {transform: translateY(-20px);}
 	60% {transform: translateY(-15px);}
 }
+
+.skills div{
+	place-items: center;
+	background-color: rgba(233, 231, 231, 0.614);
+	border: solid 1px rgba(254, 91, 167, 0.2);
+	padding: 0.5rem;
+	border-radius: 2px;
+	max-height: 3rem;
+	max-width: 8rem;
+}
+.skills img{
+	width: auto;
+	height: 100%;
+	
+}
